--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "apollo-link-context": "^1.0.20",
     "formik": "^2.2.9",
     "graphql": "^15.6.1",
+    "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "node-fetch": "^2.6.1",
     "node-sass": "^4.14.1",
@@ -22,6 +24,7 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-toastify": "^8.1.0",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "sweetalert2": "^11.1.9",
