--- a/package.json
+++ b/package.json
@@ -16,17 +16,15 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "node-fetch": "^2.6.1",
-    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-big-calendar": "^0.38.0",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.4.2",
     "react-modal": "^3.14.3",
-    "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-toastify": "^8.1.0",
-    "redux": "^4.1.1",
-    "redux-thunk": "^2.3.0",
+    "sass": "^1.45.1",
     "sweetalert2": "^11.1.9",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.9"
@@ -59,6 +57,5 @@
       "not dead",
       "not op_mini all"
     ]
-  },
-  "devDependencies": {}
+  }
 }
