HEADER WORKING 80%, HOME WORKING 70%

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.2.2",
     "animate.css": "^4.1.1",
     "apollo-link-context": "^1.0.20",
+    "apollo-upload-client": "^17.0.0",
     "formik": "^2.2.9",
     "graphql": "^15.6.1",
     "jwt-decode": "^3.1.2",
@@ -20,11 +21,14 @@
     "react-big-calendar": "^0.38.0",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.4.2",
+    "react-loading": "^2.0.3",
     "react-modal": "^3.14.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-toastify": "^8.1.0",
     "sass": "^1.45.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.4",
     "sweetalert2": "^11.1.9",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.9"
