--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.4.16",
+    "@fortawesome/fontawesome-free": "^6.0.0-beta3",
     "@react-pdf/renderer": "^2.0.21",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
